--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
     mysql:
         image: mysql:5.7.21
         environment:
-            MYSQL_ROOT_PASSWORD: discover9100Ylumenapi
-            MYSQL_DATABASE: discover_paymentapi
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+            MYSQL_DATABASE: ${DB_DATABASE}
         ports:
             - "8903:3306"
         volumes:
