--- a/.env.dist
+++ b/.env.dist
@@ -13,7 +13,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=discover_paymentapi
 DB_USERNAME=root
-DB_PASSWORD=discover9100Ylumenapi
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
